[BL-1176]  Resolve  SLP / PLP HTML - original html/css gaps

--- a/bin/custom/blstorefront/web/webroot/_ui/responsive/theme-bltheme/css/blcustom.css
+++ b/bin/custom/blstorefront/web/webroot/_ui/responsive/theme-bltheme/css/blcustom.css
@@ -674,3 +674,6 @@ p.customer-item-note {
 .savecart-modal .btn-primary{
 color:#fff !important;
 }
+.search-term{text-transform: capitalize;}
+.arrival-notification{background:#fff !important;border: 1px solid #cccccc !important;color: #3d3c3c !important;}
+.arrival-notification:hover{background:none !important;border:1px solid #ccc!important;color: #3d3c3c !important;}
